--- a/HW1/Phase1.ipynb
+++ b/HW1/Phase1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('PostgreSQL 16.3 on x86_64-redhat-linux-gnu, compiled by gcc (GCC) 14.1.1 20240701 (Red Hat 14.1.1-7), 64-bit',)\n"
+      "('PostgreSQL 16.8 on x86_64-redhat-linux-gnu, compiled by gcc (GCC) 14.2.1 20250110 (Red Hat 14.2.1-7), 64-bit',)\n"
      ]
     }
    ],
@@ -56,11 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tabellen löschen\n",
     "cursor.execute(\n",
     "    \"\"\"\n",
     "    DROP TABLE IF EXISTS H_toy CASCADE;\n",
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +97,7 @@
       "(21, 'a2', 'c')\n",
       "(22, 'a3', '2')\n",
       "(31, 'a3', '3')\n",
+      "(41, 'ai', 'z')\n",
       "\n"
      ]
     }
@@ -143,7 +143,8 @@
     "    (12, 'a2', 'b'),\n",
     "    (21, 'a2', 'c'),\n",
     "    (22, 'a3', '2'),\n",
-    "    (31, 'a3', '3');\n",
+    "    (31, 'a3', '3'),\n",
+    "    (41, 'ai', 'z');\n",
     "\"\"\"\n",
     ")\n",
     "connection.commit()\n",
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +167,7 @@
       "(31, None, None, '3')\n",
       "(11, 'a', None, None)\n",
       "(21, None, 'c', None)\n",
+      "(41, None, None, None)\n",
       "(12, None, 'b', None)\n",
       "\n"
      ]
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -210,10 +212,12 @@
       "(1, 'a1', 'a')\n",
       "(1, 'a2', 'b')\n",
       "(2, 'a2', 'c')\n",
+      "(4, 'ai', '')\n",
       "\n",
       "Table V_toy_int\n",
       "(2, 'a3', 2)\n",
       "(3, 'a3', 3)\n",
+      "(4, 'ai', -1)\n",
       "\n"
      ]
     }
@@ -247,14 +251,16 @@
     "    INSERT INTO V_toy_string (oid, key, val) VALUES\n",
     "    (1, 'a1', 'a'),\n",
     "    (1, 'a2', 'b'),\n",
-    "    (2, 'a2', 'c');\n",
+    "    (2, 'a2', 'c'),\n",
+    "    (4, 'ai', '');\n",
     "\"\"\"\n",
     ")\n",
     "cursor.execute(\n",
     "    \"\"\"\n",
     "    INSERT INTO V_toy_int (oid, key, val) VALUES\n",
     "    (2, 'a3', 2),\n",
-    "    (3, 'a3', 3);\n",
+    "    (3, 'a3', 3),\n",
+    "    (4, 'ai', -1);\n",
     "\"\"\"\n",
     ")\n",
     "connection.commit()\n",
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -276,8 +282,10 @@
       "(1, 'a1', 'a')\n",
       "(1, 'a2', 'b')\n",
       "(2, 'a2', 'c')\n",
+      "(4, 'ai', '')\n",
       "(2, 'a3', '2')\n",
       "(3, 'a3', '3')\n",
+      "(4, 'ai', '-1')\n",
       "\n"
      ]
     }
@@ -300,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,14 +345,14 @@
     "                    else:\n",
     "                        # Begrenzung auf max. 5 Vorkommen pro Wert\n",
     "                        valid_choices = [\n",
-    "                            v for v in allowed_values if value_counts[v] < 5\n",
+    "                            v for v in allowed_values if value_counts[v] < num_attributes * num_tuples/2*(1-sparsity)\n",
     "                        ]\n",
     "                        if valid_choices:\n",
     "                            chosen_value = random.choice(valid_choices)\n",
     "                            values.append(f\"'{chosen_value}'\")\n",
     "                            value_counts[chosen_value] += 1\n",
     "                        else:\n",
-    "                            values.append(\"NULL\")\n",
+    "                            values.append(\"'z'\")\n",
     "            insert_query = f\"INSERT INTO H ({', '.join([f'a{i}' for i in range(1, num_attributes + 1)] )}) VALUES ({', '.join(values)});\"\n",
     "            cursor.execute(insert_query)\n",
     "\n",
@@ -358,28 +366,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tabelle H mit 10 Tupeln und 5 Attributen erstellt.\n",
+      "Tabelle H mit 20 Tupeln und 5 Attributen erstellt.\n",
       "Table H\n",
-      "(1, 'c', 3, 'c', 46, 'b')\n",
-      "(2, None, None, 'c', 49, None)\n",
-      "(3, 'b', 97, 'c', None, 'b')\n",
-      "(4, 'a', 90, 'a', 91, 'a')\n",
-      "(5, None, 58, 'b', 73, None)\n",
-      "(6, 'b', 17, None, 82, 'c')\n",
-      "(7, 'a', 96, 'a', None, None)\n",
-      "(8, None, 54, None, None, None)\n",
-      "(9, None, 92, None, None, None)\n",
-      "(10, None, 85, None, None, None)\n",
+      "(1, 'b', 28, 'c', 92, 'a')\n",
+      "(2, 'b', 12, 'b', 96, 'b')\n",
+      "(3, 'c', 47, 'b', 70, 'a')\n",
+      "(4, 'c', 92, 'a', 6, 'c')\n",
+      "(5, 'b', 91, 'a', 58, 'b')\n",
+      "(6, 'c', 27, 'a', 97, 'c')\n",
+      "(7, 'c', 8, 'c', 68, 'a')\n",
+      "(8, 'c', 87, 'a', 43, 'a')\n",
+      "(9, 'c', 27, 'c', 2, 'b')\n",
+      "(10, 'b', 44, 'c', 13, 'c')\n",
+      "(11, 'a', 88, 'a', 58, 'a')\n",
+      "(12, 'b', 55, 'b', 15, 'a')\n",
+      "(13, 'b', 70, 'b', 88, 'c')\n",
+      "(14, 'c', 57, 'c', 31, 'a')\n",
+      "(15, 'c', 71, 'a', 91, 'c')\n",
+      "(16, 'b', 98, 'a', 97, 'c')\n",
+      "(17, 'c', 58, 'a', 87, 'b')\n",
+      "(18, 'a', 13, 'c', 81, 'b')\n",
+      "(19, 'b', 68, 'b', 25, 'a')\n",
+      "(20, 'a', 14, 'a', 14, 'c')\n",
       "\n",
       "Table H_null_count\n",
-      "(8,)\n",
+      "(0,)\n",
       "\n"
      ]
     }
@@ -388,15 +406,15 @@
     "\n",
     "\n",
     "# Beispielaufruf der Funktion generate()\n",
-    "generate(num_tuples=10, sparsity=0.3, num_attributes=5)\n",
+    "generate(num_tuples=20, sparsity=0, num_attributes=5)\n",
     "\n",
-    "# Zusätzliche Sichten zur Prüfung der Korrektheit erstellen\n",
+    "# Zusätzliche Sichten zur Prüfung der Korrektheit\n",
     "# Vorhandene Sichten löschen, falls sie existieren\n",
     "cursor.execute(\"DROP VIEW IF EXISTS H_non_null;\")\n",
     "cursor.execute(\"DROP VIEW IF EXISTS H_null_count;\")\n",
     "connection.commit()\n",
     "\n",
-    "# Sichten zur Überprüfung der Korrektheit erstellen\n",
+    "# Sichten zur Überprüfung der Korrektheit\n",
     "cursor.execute(\n",
     "    \"\"\"\n",
     "    CREATE VIEW H_null_count AS\n",
@@ -413,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
