--- a/HW1/Phase2.ipynb
+++ b/HW1/Phase2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,27 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def v2h(cursor, v_table_name, h_view_name, stop):\n",
-    "    cursor.execute(f\"DROP TABLE IF EXISTS {h_view_name}\")\n",
+    "    cursor.execute(f\"DROP VIEW IF EXISTS {h_view_name}\")\n",
     "\n",
-    "    select_statements = \",\\n \".join([f\"v{i}.value AS a{i}\" for i in range(1, stop)])\n",
-    "    join_statement = \"\\n \".join(f\"LEFT JOIN {v_table_name} AS v{i} ON base.oid = v{i}.oid AND v{i}.key = 'a{i}'\" for i in range(1, stop)) \n",
+    "    select_statements = []\n",
+    "    for i in range(1, stop):\n",
+    "        if i % 2 == 0:  # Gerade Spaltennummer -> INTEGER\n",
+    "            select_statements.append(f\"CAST(v{i}.value AS INTEGER) AS a{i}\")\n",
+    "        else:  # Ungerade Spaltennummer -> VARCHAR\n",
+    "            select_statements.append(f\"v{i}.value AS a{i}\")\n",
+    "    \n",
+    "    select_clause = \",\\n \".join(select_statements)\n",
+    "    \n",
+    "    join_statement = \"\\n \".join(\n",
+    "        f\"LEFT JOIN {v_table_name} AS v{i} ON base.oid = v{i}.oid AND v{i}.key = 'a{i}'\" \n",
+    "        for i in range(1, stop))\n",
+    "    \n",
     "    cursor.execute(f\"\"\"\n",
-    "                CREATE VIEW {h_view_name} AS\n",
-    "                SELECT base.oid, {select_statements}\n",
-    "                FROM (SELECT DISTINCT oid FROM {v_table_name}) AS base\n",
-    "                {join_statement};\n",
-    "            \"\"\")\n",
+    "            CREATE VIEW {h_view_name} AS\n",
+    "            SELECT base.oid, {select_clause}\n",
+    "            FROM (SELECT DISTINCT oid FROM {v_table_name}) AS base\n",
+    "            {join_statement};\n",
+    "        \"\"\")\n",
     "    conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,19 +160,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_storage_size(cursor, table_name):\n",
+    "    cursor.execute(f\"SELECT pg_total_relation_size('{table_name}');\")\n",
+    "    size_bytes = cursor.fetchone()[0]\n",
+    "    size_mb = size_bytes / (1024 * 1024)  # Umrechnung in MB\n",
+    "    print(f\"Speicherverbrauch von {table_name}: {size_mb:.2f} MB\")\n",
+    "    return size_mb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executed 1000 queries in 0.25 seconds\n"
+      "Executed 100000 queries in 17.90 seconds\n",
+      "Speicherverbrauch von h: 0.02 MB\n",
+      "Speicherverbrauch von v: 0.01 MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0078125"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark(cursor, \"h\", 100000)\n",
+    "# Speicherverbrauch für H und V bestimmen\n",
+    "get_storage_size(cursor, \"h\")\n",
+    "get_storage_size(cursor, \"v\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexe für v erstellt.\n"
      ]
     }
    ],
    "source": [
-    "benchmark(cursor, \"h\", 1000)"
+    "def optimize_v(cursor, v_table_name):\n",
+    "    cursor.execute(\n",
+    "        f\"CREATE INDEX IF NOT EXISTS idx_{v_table_name}_key ON {v_table_name}(key);\"\n",
+    "    )\n",
+    "    cursor.execute(\n",
+    "        f\"CREATE INDEX IF NOT EXISTS idx_{v_table_name}_value ON {v_table_name}(value);\"\n",
+    "    )\n",
+    "    conn.commit()\n",
+    "    print(f\"Indexe für {v_table_name} erstellt.\")\n",
+    "\n",
+    "\n",
+    "# Indexe auf der vertikalen Tabelle setzen\n",
+    "optimize_v(cursor, \"v\")"
    ]
   }
  ],
