--- a/HW1/Phase1.ipynb
+++ b/HW1/Phase1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -375,29 +375,29 @@
      "text": [
       "Tabelle H mit 20 Tupeln und 5 Attributen erstellt.\n",
       "Table H\n",
-      "(1, 'b', 28, 'c', 92, 'a')\n",
-      "(2, 'b', 12, 'b', 96, 'b')\n",
-      "(3, 'c', 47, 'b', 70, 'a')\n",
-      "(4, 'c', 92, 'a', 6, 'c')\n",
-      "(5, 'b', 91, 'a', 58, 'b')\n",
-      "(6, 'c', 27, 'a', 97, 'c')\n",
-      "(7, 'c', 8, 'c', 68, 'a')\n",
-      "(8, 'c', 87, 'a', 43, 'a')\n",
-      "(9, 'c', 27, 'c', 2, 'b')\n",
-      "(10, 'b', 44, 'c', 13, 'c')\n",
-      "(11, 'a', 88, 'a', 58, 'a')\n",
-      "(12, 'b', 55, 'b', 15, 'a')\n",
-      "(13, 'b', 70, 'b', 88, 'c')\n",
-      "(14, 'c', 57, 'c', 31, 'a')\n",
-      "(15, 'c', 71, 'a', 91, 'c')\n",
-      "(16, 'b', 98, 'a', 97, 'c')\n",
-      "(17, 'c', 58, 'a', 87, 'b')\n",
-      "(18, 'a', 13, 'c', 81, 'b')\n",
-      "(19, 'b', 68, 'b', 25, 'a')\n",
-      "(20, 'a', 14, 'a', 14, 'c')\n",
+      "(1, None, 33, 'a', 93, None)\n",
+      "(2, 'a', None, 'b', 13, 'b')\n",
+      "(3, None, None, None, None, 'a')\n",
+      "(4, 'a', 62, 'c', None, 'a')\n",
+      "(5, 'b', None, None, 30, 'a')\n",
+      "(6, 'a', None, None, 78, 'a')\n",
+      "(7, 'c', 66, None, 93, 'a')\n",
+      "(8, 'b', 21, 'b', None, 'a')\n",
+      "(9, 'c', 41, 'b', 74, None)\n",
+      "(10, 'a', 32, 'b', 2, 'a')\n",
+      "(11, 'c', 19, None, 16, 'c')\n",
+      "(12, 'c', 52, 'a', 81, 'b')\n",
+      "(13, None, 14, 'b', 96, 'b')\n",
+      "(14, 'c', 77, 'c', 36, None)\n",
+      "(15, None, 28, 'a', 87, 'a')\n",
+      "(16, 'b', 42, 'a', None, None)\n",
+      "(17, 'b', 41, None, 33, 'b')\n",
+      "(18, 'a', 39, 'b', 41, None)\n",
+      "(19, 'c', 49, 'c', 31, 'c')\n",
+      "(20, 'b', 63, 'b', None, 'b')\n",
       "\n",
       "Table H_null_count\n",
-      "(0,)\n",
+      "(17,)\n",
       "\n"
      ]
     }
@@ -406,7 +406,7 @@
     "\n",
     "\n",
     "# Beispielaufruf der Funktion generate()\n",
-    "generate(num_tuples=20, sparsity=0, num_attributes=5)\n",
+    "generate(num_tuples=20, sparsity=0.3, num_attributes=5)\n",
     "\n",
     "# Zusätzliche Sichten zur Prüfung der Korrektheit\n",
     "# Vorhandene Sichten löschen, falls sie existieren\n",
