--- a/HW1/Phase1.ipynb
+++ b/HW1/Phase1.ipynb
@@ -308,12 +308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# c: Korrigierte Funktion generate()\n",
     "def generate(num_tuples, sparsity, num_attributes):\n",
     "    try:\n",
     "        # Alte Tabelle löschen, falls vorhanden\n",
@@ -366,39 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tabelle H mit 20 Tupeln und 5 Attributen erstellt.\n",
-      "Table H\n",
-      "(1, None, 33, 'a', 93, None)\n",
-      "(2, 'a', None, 'b', 13, 'b')\n",
-      "(3, None, None, None, None, 'a')\n",
-      "(4, 'a', 62, 'c', None, 'a')\n",
-      "(5, 'b', None, None, 30, 'a')\n",
-      "(6, 'a', None, None, 78, 'a')\n",
-      "(7, 'c', 66, None, 93, 'a')\n",
-      "(8, 'b', 21, 'b', None, 'a')\n",
-      "(9, 'c', 41, 'b', 74, None)\n",
-      "(10, 'a', 32, 'b', 2, 'a')\n",
-      "(11, 'c', 19, None, 16, 'c')\n",
-      "(12, 'c', 52, 'a', 81, 'b')\n",
-      "(13, None, 14, 'b', 96, 'b')\n",
-      "(14, 'c', 77, 'c', 36, None)\n",
-      "(15, None, 28, 'a', 87, 'a')\n",
-      "(16, 'b', 42, 'a', None, None)\n",
-      "(17, 'b', 41, None, 33, 'b')\n",
-      "(18, 'a', 39, 'b', 41, None)\n",
-      "(19, 'c', 49, 'c', 31, 'c')\n",
-      "(20, 'b', 63, 'b', None, 'b')\n",
-      "\n",
-      "Table H_null_count\n",
-      "(17,)\n",
-      "\n"
+      "Tabelle H mit 20 Tupeln und 5 Attributen erstellt.\n"
      ]
     }
    ],
@@ -406,7 +380,15 @@
     "\n",
     "\n",
     "# Beispielaufruf der Funktion generate()\n",
-    "generate(num_tuples=20, sparsity=0.3, num_attributes=5)\n",
+    "generate(num_tuples=20, sparsity=0.3, num_attributes=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Zusätzliche Sichten zur Prüfung der Korrektheit\n",
     "# Vorhandene Sichten löschen, falls sie existieren\n",
